Custom sing in and custom sing up ok.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 
         <input type="submit" value="Login" class="btn btn-primary" />
     </form>
-
+<a th:href="register">Sing up</a>
 </div>
 
 </body>
