Displaying texts for each logged user

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,8 +32,21 @@
 
 
 </form>
+    <div th:each="elem :${textzz}" >
+        <h1 th:text="${elem.text}"></h1>
+<!--        <h1 th:text="${x}"></h1>-->
+    </div>
+
 
 </div>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
